--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     tools:context="com.example.apsolutiocardviewproject.MainActivity">
 
     <androidx.cardview.widget.CardView
-      android:layout_height="250sp"
+      android:layout_height="220dp"
         android:layout_width="match_parent"
       >
 
@@ -20,11 +20,11 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="136dp"
-                android:layout_height="121dp"
-                android:layout_marginStart="16dp"
+                android:layout_width="136sp"
+                android:layout_height="121sp"
+                android:layout_marginStart="16sp"
 
-                android:layout_marginTop="36dp"
+                android:layout_marginTop="36sp"
                 android:layout_toLeftOf="@id/tv_profile"
                 android:src="@drawable/ic_avatar"
                 app:layout_constraintStart_toStartOf="parent"
@@ -33,11 +33,11 @@
 
             <TextView
                 android:id="@+id/tv_profile"
-                android:layout_width="66dp"
-                android:layout_height="19dp"
+                android:layout_width="66sp"
+                android:layout_height="19sp"
                 android:layout_centerInParent="true"
-                android:layout_marginStart="60dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginStart="60sp"
+                android:layout_marginBottom="16sp"
                 android:text="Age= 28"
                 android:textAlignment="center"
                 android:textStyle="bold"
@@ -47,10 +47,10 @@
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
-                android:layout_height="44dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="8dp"
+                android:layout_height="44sp"
+                android:layout_marginStart="8sp"
+                android:layout_marginTop="16sp"
+                android:layout_marginEnd="8sp"
                 android:text="Your Net Worth is"
                 android:textAlignment="center"
                 android:textSize="18dp"
@@ -64,14 +64,14 @@
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="23dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8sp"
+                android:layout_marginTop="23sp"
+                android:layout_marginEnd="8sp"
                 android:text="Rs 14.20 crore"
 
                 android:textAlignment="center"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="30dp"
+                android:textSize="30sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/textView3"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -82,11 +82,11 @@
 
             <TextView
                 android:id="@+id/textView3"
-                android:layout_width="53dp"
-                android:layout_height="23dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:padding="3dp"
+                android:layout_width="53sp"
+                android:layout_height="23sp"
+                android:layout_marginStart="8sp"
+                android:layout_marginEnd="8sp"
+                android:padding="3sp"
                 android:text="or"
                 android:textAlignment="center"
                 android:textStyle="bold"
@@ -97,11 +97,10 @@
 
             <TextView
                 android:id="@+id/textView4"
-                android:layout_width="193dp"
-                android:layout_height="45dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="16dp"
+                android:layout_width="193sp"
+                android:layout_height="45sp"
+                android:layout_marginStart="8sp"
+                android:layout_marginEnd="8sp"
                 android:text="Rupees Fourteen Crores and Twenty lakh only"
                 android:textAlignment="center"
                 android:textStyle="bold"
@@ -112,11 +111,11 @@
 
             <TextView
                 android:id="@+id/textView5"
-                android:layout_width="200dp"
-                android:layout_height="58dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="16dp"
+                android:layout_width="200sp"
+                android:layout_height="58sp"
+                android:layout_marginStart="8sp"
+                android:layout_marginEnd="8sp"
+                android:layout_marginBottom="16sp"
                 android:text="Note:your net worth is calculated based on data in Finakya app"
                 android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -126,28 +125,30 @@
 
             <TextView
                 android:id="@+id/textView6"
-                android:layout_width="82dp"
-                android:layout_height="39dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_width="66dp"
+                android:layout_height="17dp"
+                android:layout_marginStart="8sp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8sp"
                 android:text="Aritro"
                 android:textAlignment="center"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/tv_profile"
                 app:layout_constraintEnd_toStartOf="@+id/textView4"
                 app:layout_constraintHorizontal_bias="0.392"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:layout_editor_absoluteY="181dp" />
+                app:layout_constraintTop_toBottomOf="@+id/imageView" />
         </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
 
     <GridLayout
         android:layout_width="match_parent"
-        android:layout_height="421dp"
+        android:layout_height="451dp"
         android:layout_weight="8"
         android:alignmentMode="alignMargins"
         android:columnCount="2"
         android:columnOrderPreserved="false"
-        android:padding="14dp"
+        android:padding="14sp"
         android:rowCount="2">
 
         <!--Row1-->
@@ -157,13 +158,13 @@
 
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_rowWeight="1"
+            android:layout_rowWeight="1.5"
             android:layout_columnWeight="1"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="16dp"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="8dp">
+            android:layout_marginLeft="16sp"
+            android:layout_marginRight="16sp"
+            android:layout_marginBottom="16sp"
+            app:cardCornerRadius="8sp"
+            app:cardElevation="8sp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -186,13 +187,14 @@
                     android:layout_height="wrap_content"
                     android:text="Net Bank Balance"
                     android:textStyle="bold"
+
                     android:textAlignment="center" />
                 <TextView
                     android:id="@+id/tv_item1_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Rs 1.20 crore"
-                    android:textSize="20dp"
+                    android:textSize="15dp"
                     android:textStyle="bold"
                     android:textAlignment="center" />
                 <TextView
@@ -200,6 +202,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="29th Jan,2020, 5:08pm"
+                    android:textSize="10dp"
                     android:textAlignment="center" />
 
 
@@ -213,19 +216,19 @@
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_rowWeight="1"
+            android:layout_rowWeight="1.5"
             android:layout_columnWeight="1"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="16dp"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="8dp">
+            android:layout_marginLeft="16sp"
+            android:layout_marginRight="16sp"
+            android:layout_marginBottom="16sp"
+            app:cardCornerRadius="8sp"
+            app:cardElevation="8sp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_margin="16dp"
+                android:layout_margin="16sp"
                 android:orientation="vertical">
 
                 <ImageView
@@ -240,6 +243,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Net Investment Value"
+                    android:textStyle="bold"
                     android:textAlignment="center" />
 
                 <TextView
@@ -247,7 +251,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Rs 10 crore"
-                    android:textSize="20dp"
+                    android:textSize="15dp"
                     android:textStyle="bold"
                     android:textAlignment="center" />
                 <TextView
@@ -255,6 +259,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="29th Jan,2020, 5:08pm"
+                    android:textSize="10dp"
                     android:textAlignment="center" />
 
 
@@ -267,19 +272,19 @@
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_rowWeight="1"
+            android:layout_rowWeight="1.5"
             android:layout_columnWeight="1"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="16dp"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="8dp">
+            android:layout_marginLeft="16sp"
+            android:layout_marginRight="16sp"
+            android:layout_marginBottom="16sp"
+            app:cardCornerRadius="8sp"
+            app:cardElevation="8sp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_margin="16dp"
+                android:layout_margin="16sp"
                 android:orientation="vertical">
 
                 <ImageView
@@ -294,13 +299,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Other Assets Value"
+                    android:textStyle="bold"
                     android:textAlignment="center" />
                 <TextView
                     android:id="@+id/tv_item3_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Rs 5 crore"
-                    android:textSize="20dp"
+                    android:textSize="15dp"
                     android:textStyle="bold"
                     android:textAlignment="center" />
                 <TextView
@@ -308,6 +314,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="29th Jan,2020, 5:08pm"
+                    android:textSize="10dp"
                     android:textAlignment="center" />
 
 
@@ -319,13 +326,13 @@
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_rowWeight="1"
+            android:layout_rowWeight="1.5"
             android:layout_columnWeight="1"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="16dp"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="8dp">
+            android:layout_marginLeft="16sp"
+            android:layout_marginRight="16sp"
+            android:layout_marginBottom="16sp"
+            app:cardCornerRadius="8sp"
+            app:cardElevation="8sp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -346,6 +353,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Net Loan Value"
+                    android:textStyle="bold"
                     android:textAlignment="center" />
 
                 <TextView
@@ -353,7 +361,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Rs 2 crore"
-                    android:textSize="20dp"
+                    android:textSize="15dp"
                     android:textStyle="bold"
                     android:textAlignment="center" />
                 <TextView
@@ -361,6 +369,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="29th Jan,2020, 5:08pm"
+                    android:textSize="10dp"
                     android:textAlignment="center" />
 
 
@@ -379,5 +388,5 @@
     android:textStyle="bold"
     android:textAlignment="center"
     android:textColor="@color/white"
-    android:textSize="16dp"/>
+    android:textSize="16sp"/>
 </LinearLayout>
