--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,7 +78,7 @@
                 app:layout_constraintHorizontal_bias="0.822"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
-                app:layout_constraintVertical_bias="0.68" />
+                app:layout_constraintVertical_bias="1.0" />
 
             <TextView
                 android:id="@+id/textView3"
@@ -86,13 +86,14 @@
                 android:layout_height="23sp"
                 android:layout_marginStart="8sp"
                 android:layout_marginEnd="8sp"
+                android:layout_marginBottom="8dp"
                 android:padding="3sp"
                 android:text="or"
                 android:textAlignment="center"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/textView4"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.592"
+                app:layout_constraintHorizontal_bias="0.574"
                 app:layout_constraintStart_toEndOf="@+id/tv_profile" />
 
             <TextView
@@ -106,7 +107,7 @@
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/textView5"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.809"
                 app:layout_constraintStart_toEndOf="@+id/tv_profile" />
 
             <TextView
@@ -115,18 +116,17 @@
                 android:layout_height="58sp"
                 android:layout_marginStart="8sp"
                 android:layout_marginEnd="8sp"
-                android:layout_marginBottom="16sp"
                 android:text="Note:your net worth is calculated based on data in Finakya app"
                 android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.815"
                 app:layout_constraintStart_toEndOf="@+id/tv_profile" />
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="66sp"
-                android:layout_height="17sp"
+                android:layout_height="0dp"
                 android:layout_marginStart="8sp"
                 android:layout_marginTop="8sp"
                 android:layout_marginEnd="8sp"
